# centaur_template

./: .gitignore  .pre-commit-config.yaml  Claude.md  README.md  mkdocs.yml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: docs.yml  python-ci.yml  rust-ci.yml
Summary/: summary20251027.md  summary20251104.md
docs/: TEMPLATE_NOTES.md  index.md
docs/api/: python.md  rust.md
docs/development/: getting-started.md  python-setup.md  rust-setup.md
docs/testing/: fuzzing.md
python/: README.md  pyproject.toml
python/src/centaur_example/: __init__.py  calculator.py  text_utils.py
python/tests/: __init__.py
python/tests/fuzzing/: __init__.py  fuzz_atheris_calculator.py  test_hypothesis_calculator.py  test_hypothesis_text_utils.py
python/tests/integration/: __init__.py  test_combined_operations.py
python/tests/unit/: __init__.py  test_calculator.py  test_text_utils.py
rust/: .gitignore  Cargo.toml  README.md
rust/fuzz/: Cargo.toml  README.md
rust/fuzz/fuzz_targets/: fuzz_calculator.rs  fuzz_text_utils.rs
rust/src/: calculator.rs  lib.rs  text_utils.rs
rust/tests/: integration_test.rs
